--- a/pizza.html
+++ b/pizza.html
@@ -61,7 +61,7 @@
 								<header class="major">
 									<h2>Data Source</h2>
 								</header>
-								<p>Ono of a case studies from <a href="https://8weeksqlchallenge.com/case-study-2/" target="_blank">8 Week SQL Challenge_Data with Danny</a>
+								<p>One of a case studies from <a href="https://8weeksqlchallenge.com/case-study-2/" target="_blank">8 Week SQL Challenge_Data with Danny</a>
 							</div>
 						</section>
 
